Uploaded image for project: 'ActiveMQ C++ Client'
  1. ActiveMQ C++ Client
  2. AMQCPP-219

Compilation errors in main/decaf/net on Solaris 10 with SunStudio 12

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • 2.2.2, 2.2.3
    • 2.2.4, 3.0
    • Decaf
    • None
    • Solaris sparc 10 SunStudio 12

    • Patch Available

    Description

      compilation of TcpSocket.cpp fails with:
      "decaf/net/TcpSocket.cpp", line 32: Error: Cannot use const int to initialize apr_socket_t*.
      "decaf/net/TcpSocket.cpp", line 39: Error: Cannot use const int to initialize apr_socket_t*.
      2 Error(s) detected.

      compilation of SocketInputStream.cpp fails with:
      "decaf/net/SocketInputStream.cpp", line 102: Error: ioctl is not a member of file level.
      1 Error(s) detected.

      Attachments

        1. cms_2.2.3.patch
          1 kB
          Michael Vishchers

        Activity

          People

            tabish Timothy A. Bish
            mvishchers@psi.de Michael Vishchers
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 1h
                1h
                Remaining:
                Remaining Estimate - 0h
                0h
                Logged:
                Time Spent - 1h
                1h