https://issues.apache.org/activemq/browse/AMQCPP-219

Applied patch for Socket code on Solaris

git-svn-id: https://svn.apache.org/repos/asf/activemq/activemq-cpp/branches/activemq-cpp-2.x@737030 13f79535-47bb-0310-9956-ffa450edef68